--- a/Appendix.tex
+++ b/Appendix.tex
@@ -314,4 +314,6 @@ SPM_{\displaystyle concentration} = \frac{[final~filter~weight~(mg) - tare~filte
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 \chapter{HydroLight Specification}
 
+blah, blah, bla
+
 \end{appendices}
