--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -167,7 +167,7 @@
 \include{Acronyms} % to include Acronyms.tex
 
 % Added 11-15-13 ----------------------------------------
-\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
+\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix,Vita} 
 % \includeonly{Acronyms,Introduction,Results}
 
 % Added 10-21-15 ----------------------------------------
@@ -384,7 +384,7 @@ Mis amados viejitos,\\ Osvaldo Concha Silva\\ and (y) \\ Nelly del Carmen Sep\'u
 
 
 \printindex
-\markboth{\it INDEX}{\it INDEX}
+\markboth{\it INDEX}{\it INDEX} % to change just this page header
 \thispagestyle{fancy}
 
 %\bibliographystyle{ieeetr}
@@ -393,6 +393,7 @@ Mis amados viejitos,\\ Osvaldo Concha Silva\\ and (y) \\ Nelly del Carmen Sep\'u
 \bibliographystyle{apalike}
 \bibliography{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/javier_bibPhD}
 
+\include{Vita}
 
 \listoftodos
 
