Some minor corrections to Results

--- a/Results.tex
+++ b/Results.tex
@@ -30,7 +30,7 @@ An example of a Landsat 8 image that includes the area of study is illustrated i
   % \vspace{1cm}
 \end{figure}
 
-Water samples are collected for each site in dark Nalgene bottles (see Appendix~\ref{ch:fieldmea} for more details about data collection). Additionally, remote-sensing reflectances $R_{rs}$ are measured using an ASD and a SVC instrument (one for each crew). Backscattering measurements are taken using a HydroScat-2. This measurement is taken by both crew only if the logistic of the particular day allows it. Otherwise priority is given to the Lake crew. For each site, a location is recorded using a GPS. \autoref{tab:collect} shows a summary of the data collections done in 2013, 2014 and 2015 seasons with the respective available data.  The three Landsat 8 images used in this research are shown in green filled rows: the images acquired in 09-19-2013 (scene LC80160302013262LGN00; \autoref{fig:L8Image130919}.(a)), 09-29-2014 (scene LC80170302014272LGN00; \autoref{fig:L8Images1415}.(a)) and 09-16-2015 (scene LC80170302015259LGN00; \autoref{fig:L8Images1415}.(b)). The corresponding areas of study are shown in \autoref{fig:0910913Sites}, \autoref{fig:ROI_L8Images1415}.(a) and \autoref{fig:ROI_L8Images1415}.(b), respectively.
+Water samples are collected for each site in dark Nalgene bottles (see Appendix~\ref{ch:fieldmea} for more details about data collection). Additionally, remote-sensing reflectances $R_{rs}$ are measured using an ASD and a SVC instrument (one for each crew). Backscattering measurements are taken using a HydroScat-2. This measurement is taken by both crew only if the logistic of the particular day allows it. Otherwise priority is given to the Lake crew. For each site, a location is recorded using a GPS. \autoref{tab:collect} shows a summary of the data collections done in 2013, 2014 and 2015 seasons with the respective available data.  The three Landsat 8 images used in this research are shown in green filled rows: the images acquired in 09-19-2013 (scene LC80160302013262LGN00; \autoref{fig:L8Image130919}.(a)), 09-29-2014 (scene LC80170302014272LGN00; \autoref{fig:L8Images1415}.(a)) and 09-16-2015 (scene LC80170302015259LGN00; \autoref{fig:L8Images1415}.(b)). The corresponding areas of study are shown in \autoref{fig:0910913Sites}, \autoref{fig:ROI_L8Images1415}.(a) and \autoref{fig:ROI_L8Images1415}.(b), respectively\todo{include first ROI image for comparison}.
 
 \begin{table}[htb]
   \caption{Summary of 2013, 2014 and 2015 data collections. Three images were used for testing the retrieval (green filling).}
@@ -172,7 +172,7 @@ As mentioned previously, the atmospheric correction methods based on the Gordon 
 A full description of the OLI's processing in SeaDAS is described in \cite{Franz:2015}. The processing in SeaDAS includes a vicarious calibration derived from the marine optical buoy (MOBY) near Lanai, Hawaii. For the atmospheric correction in SeaDAS, the option used in this study was the operational atmospheric correction scheme (aer\_opt=-2), with the shortest and longest sensor wavelength for aerosol models selection equal to band 6 and band 7 (aer\_wave\_short=1609 and aer\_wave\_long=2201). Since a default land/water mask fine enough to resolve the ponds in the scene is not included in SeaDAS, all the pixels were forced to be processed as ocean (proc\_ocean=2) and the land mask was set to the ``landmask\_null.dat'' file. Additionally, in order to increase the SNR of SWIR bands and avoid $R_{rs}$ retrieval failing in the ponds, the SWIR bands were spatially averaged with a 5x5 window. This was accomplished by including a filter (filter\_opt=1) and modifying the default SeaDAS's file ``msl12\_filter.dat''.
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{Acolite-SWIR}
-The third atmospheric correction method analyzed was the implementation of the \cite{Gordon:1994} approach in the \gls{acolite} tool (\S\ref{subsec:acolite}). \gls{acolite} was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration \cite{Franz:2015}.
+The third atmospheric correction method analyzed was the implementation of the \cite{Gordon:1994} approach in the \gls{acolite} tool (\S\ref{subsec:acolite}). \gls{acolite} was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsubsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration \cite{Franz:2015}.
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{SeaDAS-MUMM}
 The fourth method evaluated in this work was the atmospheric correction approach developed by \cite{Ruddick:2000bs}, hereafter SeaDAS-MUMM (\acrfull{mumm}). This method is a modification of \cite{Gordon:1994}'s algorithm for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. In this study, this method was applied using its implementation available in SeaDAS (aer\_opt=-10), using bands 4 and 5 and setting the calibration parameter $\alpha=8.7$ for OLI, as suggested by \cite{Vanhellemont2014} and \cite{Vanhellemont2014a}. 
@@ -358,7 +358,7 @@ The $R_{rs}$ products from the four atmospheric correction methods described in 
   \caption{Remote-sensing reflectance ($R_{rs}$) at $561nm$ (a-d) and $655nm$ (e-h) from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs561_655} } 
 \end{figure}
 
-Another comparison of $R_{rs}$ at $443nm$, $483nm$, $561nm$ and $655nm$ among all four atmospheric correction methods is shown in \autoref{fig:13262Rrs443}--\ref{fig:13262Rrs655} as scatter plots with a \gls{rma} regression line in red solid lines. The colors indicates pixel density. Again, all the methods show more similarities in band 3 and 4 than band 1 and 2, which is corroborated by the smaller \gls{rmse} for band 3 and 4 than band 1 and 2, which translates to more closeness to the $1:1$ line. This indicates that there is a higher correlation for band 3 and 4 than band 1 and 2 for all methods. \autoref{tab:RrsCompMethod} shows the slope and offset for the regression lines and the goodness of fit $R^2$ values for the comparison among all methods and for all bands. The $R^2$ values show a good correlation for all cases in the range from $0.7090$ to $0.9302$ (underlined in \autoref{tab:RrsCompMethod}). \autoref{tab:RrsCompMethod} also shows the number of valid pixels retrieved $N$ (non negative) and the \gls{rmse} between the methods compared. 
+Another comparison of $R_{rs}$ at $443nm$, $483nm$, $561nm$ and $655nm$ among all four atmospheric correction methods is shown in \autoref{fig:13262Rrs443}--\ref{fig:13262Rrs655} as scatter plots with a \gls{rma} regression line in red solid lines. The colors indicates pixel density. Again, all the methods show more similarities in band 3 and 4 than band 1 and 2, which is corroborated by the smaller \gls{rmse} for band 3 and 4 than band 1 and 2, which translates to more closeness to the $1:1$ line. This indicates that there is a higher correlation for band 3 and 4 than band 1 and 2 for all methods. \autoref{tab:RrsCompMethod} shows the slope and offset for the regression lines and the goodness of fit $R^2$ values for the comparison among all methods and for all bands. The $R^2$ values show a good correlation for all cases in the range from $0.7090$ to $0.9302$ (underlined in \autoref{tab:RrsCompMethod}). \autoref{tab:RrsCompMethod} also shows the number of valid pixels retrieved $N$ (non negative) and the \gls{rmse} between the methods compared\todo{fix space p.120}.
 
 \begin{landscape}
 % Method 1    Method 2    wl    NegTool1  NegTool2    usable  rsq_SS      rsq_corr    slope   offset      R^2         N           RMSE
@@ -426,14 +426,14 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 
 All methods produced negative $R_{rs}$ values. These negative values indicates that the atmosphere contribution has been over estimated. These negative values are shown in \autoref{tab:RrsCompMethod} as percentage of the total of water pixels for each method compared. These negative values were not used in the comparison. Finally, \autoref{tab:RrsCompMethod} shows the percentage of total number of water pixels used in the comparison (labeled as ``Used $[\%]$''). It can be seen that the Gordon and Wang's based methods generate more negative values compared with the MoB-ELM method overall. However, these negative values are small. 
 
-\autoref{fig:13262RrsCompField1} and \autoref{fig:13262RrsCompField2} show a comparison between $R_{rs}$ spectra measured in the field (blue dashed line) with retrieved $R_{rs}$ spectra from the four atmospheric correction methods for different sites within the study area (labels for \autoref{fig:13262RrsCompField1}.(a) ONTNS: Lake Ontario Near Shore, (b) ONTOS: Lake Ontario Off Shore, (c) ONTEX: Lake Ontario Extra, (d) RVRPLM: River Plume and (e) RVRPIER: River Pier; labels for \autoref{fig:13262RrsCompField2}.(a) LONGN: Long Pond North, (b) LONGS: Long Pond South, (c) CRANB: Cranberry Pond, (d) BRADIN: Braddock Bay In and (e) BRADONT: Braddock Bay - Lake Ontario side). Note that {\it in situ} data were not available for all stations. The spectra for each method tend to differ more from the field spectra in band 1 and 2 than in band 3 and 4, for all sites. The \gls{mobelm} algorithm performs the best over all. The Acolite-SWIR algorithm is the one that differs the most, specially in band 1 and 2. 
+\autoref{fig:13262RrsCompField1} and \autoref{fig:13262RrsCompField2} show a comparison between $R_{rs}$ spectra measured in the field (blue dashed line) with retrieved $R_{rs}$ spectra from the four atmospheric correction methods for different sites within the study area for the 09-19-2013 scene (labels for \autoref{fig:13262RrsCompField1}.(a) ONTNS: Lake Ontario Near Shore, (b) ONTOS: Lake Ontario Off Shore, (c) ONTEX: Lake Ontario Extra, (d) RVRPLM: River Plume and (e) RVRPIER: River Pier; labels for \autoref{fig:13262RrsCompField2}.(a) LONGN: Long Pond North, (b) LONGS: Long Pond South, (c) CRANB: Cranberry Pond, (d) BRADIN: Braddock Bay In and (e) BRADONT: Braddock Bay - Lake Ontario side). Note that {\it in situ} data were not available for all stations. The spectra for each method tend to differ more from the field spectra in band 1 and 2 than in band 3 and 4, for all sites. The \gls{mobelm} algorithm performs the best over all. The Acolite-SWIR algorithm is the one that differs the most, specially in band 1 and 2. 
 
 We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate the differences between the {\it in situ} measurements and the spectra retrieved from the atmospheric correction methods. The \gls{nrmse} for the $R_{rs}$ is defined as
 \begin{equation}
 \label{eq:NRMSE}
   NRMSE =\frac{\sqrt{\frac{1}{N}\sum_{n=1}^N{\left[R_{rs}(\lambda)_{ret}(n) - R_{rs}(\lambda)_{mea}(n)\right]^2}}}{max\{R_{rs}(\lambda)_{mea}(n)\} - min\{R_{rs}(\lambda)_{mea}(n)\}}\times100 ~[\%]
 \end{equation}
-\noindent where $R_{rs}(\lambda)_{ret}$ is the retrieved $R_{rs}(\lambda)$, $R_{rs}(\lambda)_{mea}$ is the measured $R_{rs}(\lambda)$, and $n=1\dots N$ is the number of measured concentrations. For this case, $N=5$ {\it in situ} measurements. \autoref{fig:NRMSE130919_RRS} shows the NRMSE for all the atmospheric correction methods for all bands. It can be seen that the MoB-ELM algorithm performs the best for all bands, followed by the SeaDAS-SWIR algorithm. The largest errors are obtained when applying the Acolite-SWIR algorithm, specially in band 1, followed by the SeaDAS-MUMM algorithm.
+\noindent where $R_{rs}(\lambda)_{ret}$ is the retrieved $R_{rs}(\lambda)$, $R_{rs}(\lambda)_{mea}$ is the measured $R_{rs}(\lambda)$, and $n=1\dots N$ is the number of measured concentrations. For this case, $N=5$ {\it in situ} measurements\todo{calculate NRMSE for 09-29-2014 scene...}. \autoref{fig:NRMSE130919_RRS} shows the NRMSE for all the atmospheric correction methods for all bands. It can be seen that the MoB-ELM algorithm performs the best for all bands, followed by the SeaDAS-SWIR algorithm. The largest errors are obtained when applying the Acolite-SWIR algorithm, specially in band 1, followed by the SeaDAS-MUMM algorithm\todo{add in situ $R_{rs}$}.
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[H]
@@ -781,7 +781,7 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
       \end{overpic}
   \end{minipage}
 
-  \caption{Comparison of the retrieved results for $R_{rs}$ with {\it in situ} data using the normalized root mean squared error (NRMSE) for $R_{rs}$ at 443, 483, 561 and 655nm. \label{fig:NRMSE130919_RRS} } 
+  \caption{Comparison of the retrieved results for $R_{rs}$ with {\it in situ} data of the 09-19-2013 scene using the normalized root mean squared error (NRMSE) for $R_{rs}$ at 443, 483, 561 and 655nm. \label{fig:NRMSE130919_RRS} } 
 \end{figure}
 
 
