--- a/Summary.tex
+++ b/Summary.tex
@@ -1,46 +1,61 @@
 % !TEX root=Thesis_PhD.tex  
 % the previous is to reference main .bib
 %% CHAPTER
-\chapter{Conclusions, Discussions and Future Work}
-\section{Conclusions and Discussions}
+\chapter{Conclusions and Future Work}
+This chapter includes a summary of this research, some discussions about the used methodology, the limitations of the used approach, the derived conclusions from the results and where this work could be taken as future work. The conclusions are separated into the main outcomes of this work: the MoB-ELM algorithm, and the retrieval of CPAs.
 
-% The NASA's standard bio-optical algorithms OC2, OC3, OC4\cite{OReilly2000} and OCI\cite{Hu:2012} for the retrieval of chlorophyll-{\it a} were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of color producing agents (CPAs; chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. 
-
-% Gerace {\it et al.} (2013)\cite{Gerace:2013} developed an algorithm for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) using simulated OLI data. Concha and Schott (2014)\cite{Concha2013IGARSS} extended Gerace's approach to actual OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site.
-
-
+% ------------------------------
+\section{Conclusions}
+\label{sec:conc}
+% ------------------------------
 \subsection{MoB-ELM}
-The MoB-ELM atmospheric correction algorithm presented here tries to avoid the use of field reflectance ground-truth as commonly used in the traditional ELM method. In the MoB-ELM, the bright pixel is obtained from either the Landsat reflectance product over a bright target in the scene or from an Ecolight run simulating a water body with high concentration of CPAs in the scene. The dark pixel is obtained from an Ecolight run simulating a water body with low concentration of CPAs present in the scene. This algorithm does not require zero water signal in the NIR bands, so it could be applied to highly turbid waters. This algorithm assumes that the atmosphere is the same over the area of study.
+Applying the atmospheric correction algorithms based on \cite{Gordon:1994} to the Landsat 8 imagery could present some limitations such a noisy product when using the \gls{swir} bands over highly turbid waters with water-leaving signal in the \gls{nir}. The \gls{mobelm} atmospheric correction algorithm \cite{Concha2014SPIE} was developed as an alternative to overcome these limitations. Also, the MoB-ELM algorithm is not exclusive for Landsat 8 imagery. It could be applied to any type of sensor.
 
-\label{sec:conc}  % \label{} allows reference to this section
+The \gls{mobelm} algorithm tries to avoid the use of field reflectance ground-truth as commonly used in the traditional \gls{elm} method. However, it is recommended to use the \gls{elm} whenever possible, i.e. when {\it in situ} information about the bright and dark target is available. As a review, in the MoB-ELM, the bright pixel is obtained from either the Landsat reflectance product over a bright target in the scene or from an Ecolight run simulating a water body with high concentration of CPAs in the scene. The dark pixel is obtained from an Ecolight run simulating a water body with low concentration of CPAs present in the scene. This algorithm does not require zero water signal in the NIR bands, so it could be applied to highly turbid waters. This algorithm assumes that the atmosphere is the same over the area of study.
 
+% Results from MoB-ELM
+The MoB-ELM algorithm was applied to {three \todo{three?}} Landsat 8 images in order to apply the retrieval algorithm. Although, only the \gls{rrs} results from the 2013 image were compared with {\it in situ} data for validation. First, the results were compared with the traditional \gls{elm} algorithm using the ground-truth data for the dark and bright pixel. This comparison included the spectra of four site in the scene. The difference is less than one percent reflectance unit. 
 
+% ----- added From SPIE SD
+% \subsection{Comparison with Standard Algorithms}
+For further validation, the \gls{mobelm} algorithm was compared with three algorithms based on the NASA's standard algorithms based on the methods developed by \cite{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values(\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall. \todo{include rest of the images in the NRMSE calculation for Rrs}.
+
+The study of coastal water includes an extra signal not taken in account in the remote sensing of open ocean: adjacency effect product of the bright targets present the shoreline. This effect is not taken into account in the \cite{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth\todo{check!}.
+
+The \gls{mobelm} forces the dark pixel to look like the Ecolight run, which could not be necessary true. This approach takes implicitly in account the uncertainties in the system by forcing the water pixels to look as the modeled pixels in Ecolight. One big inconvenience is the lack of knowledge of the scattering phase function, and that the data for the scattering coefficients were not updated.
+
+% ------------------------------
 \subsection{Spectral-Matching and LUT retrieval}
+The NASA's standard bio-optical algorithms OC2, OC3, OC4 \cite{OReilly2000} and OCI \cite{Hu:2012} for the retrieval of chlorophyll-{\it a} were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of color producing agents (CPAs; chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. 
+
+Gerace {\it et al.} (2013)\cite{Gerace:2013} developed an algorithm for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) using simulated OLI data. Concha and Schott (2014)\cite{Concha2013IGARSS} extended Gerace's approach to actual OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site.
+
 % copied from RS of Env. paper
 The retrieval results shown in this study are promising for the use of Landsat 8 for monitoring of coastal and inland waters. The retrieval process was applied to two Landsat 8 scenes over the same study area and compared with field measurements. Maps of CPA concentrations show the expected trends of low concentration in the lake and higher concentration in the ponds. The retrieval was validated with ground-truth data taken at the same time as the satellite overpass, as opposed to comparison with historical field measurements. The comparison with field measurements exhibit error comparable with previous performance predictions for Landsat 8. An advantage of this retrieval algorithm is that it retrieves simultaneously all three CPAs.
 
 
 
- % and that the water signal in the SWIR bands is zero, which is commonly the case since water has a high absorption in the SWIR wavelengths, even in highly turbid waters
-% Practical applications  
-% Disadvantages and Advantages
+and that the water signal in the SWIR bands is zero, which is commonly the case since water has a high absorption in the SWIR wavelengths, even in highly turbid waters
+
+Practical applications  
+
+Disadvantages and Advantages
+
 % Limitations
 
 One of the limitation of the developed retrieval algorithm is that the MoB-ELM needs some knowledge of the water body (e.g. IOPs and concentration of constituents at at least one point), which is often available but not always, and therefore, it will not work in every case because of the need for this knowledge. However, it is still a good answer for many cases where this knowledge is indeed available. Future work is aiming for an approach with good atmospheric correction without the need for ground-truth. For example, IOPs are often stable and could be estimated from previous studies (perhaps seasonally in some water bodies).
 
-% Inclusion of a new red edge band in the future Landsat 9 will improve the results. 
+Inclusion of a new red edge band in the future Landsat 9 will improve the results. 
+
 Some pixels from the lake shoreline include signal from the bottom causing outliers in the retrieval results since the bottom reflectance was not accounted for in the process. The next version of this retrieval algorithm should address this issue. Glint and adjacency effects were also not addressed in this work, and they could affect the atmospheric correction.
 
 
 
 Additionally, the results from the MoB-ELM and the retrieval algorithm will be compared with standard products derived from ocean color satellites.
 
-To date, there are no other sources of free access, open to the international science community, satellite imagery with similar spatial resolution or similar standard product (e.g. MODIS chl-a product) to compare with. Therefore, a direct comparison of results from our approach with typical algorithms over water bodies smaller than one kilometer is not possible. This is a challenge that needs to be addressed since there is a particular interest from local communities for monitoring water bodies that are not resolvable by current ocean color satellites. This is the case of the ponds included in this study, which are less than one kilometer in size. This fact makes Landsat 8 a pioneer in the retrieval of water quality parameters over medium to small water bodies. This also opens a need for more field measurement collection (i.e. IOPs, $R_{rs}$ and concentrations) on a regular basis where water quality needs to be assessed for the validation of products derived from moderate spatial resolution sensors such a Landsat 8 and the upcoming Sentinel 2. 
+
 % ----- End copy
 
-% ----- added From SPIE SD
-\subsection{Comparison with Standard Algorithms}
-There were four different atmospheric correction algorithms analyzed in this study. Three of them are based in the NASA's standard algorithms based on the methods developed by Gordon and Wang\cite{Gordon:1994}. The fourth algorithm is based on the MoB-ELM algorithm developed by Concha and Schott\cite{Concha2014SPIE}. The remote-sensing reflectances retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE (\autoref{tab:Sites}). When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}).
 
 When retrieved chlorophyll-{\it a} concentrations ($C_a$) are compared with {\it in situ}, the results from the Concha and Schott's approach performed better than the rest of the algorithms(\autoref{fig:NRMSE130919CHL}). This was expected since the ocean color algorithms were developed with the lack of {\it in situ} data representative of Case 2 waters with high concentration of color producing agents (CPAs).
 
@@ -48,14 +63,26 @@ These results demonstrate that for Case 2 waters, the solution for the ocean col
 
 The presented work is a very limited study using only a single data set. The results need to be tested on a much larger set of data to see if the can be generalized. This implies that more {\it in situ} data need to be collected.
 % --------- end SPIE SD
+
 % -------------------------------------
 \section{Future Work}
+\label{sec:futurework}
+% ------------------------------
 \subsection{Hydrodynamics models} 
 The next step will be to use the validated results from the retrieval process for training hydrodynamics models to predict the future behavior of the water bodies. This would be based on previous work done by Pahlevan~{\it et al.} \cite{Pahlevan:2012b}, who used concentration maps obtained from the retrieval process using satellite imagery to train the ALGE hydrodynamic model. For example, the hydrodynamic model would allow us to monitor the dynamics of coastal and inland waters near river discharges. The maps of water constituent concentrations on the surface can be used to calibrate the hydrodynamic models.
 
+% ------------------------------
 \subsection{Investigate New Sensor Enhancements for Future Missions}
 Water pixel spectra from a hyperspectral image (e.g. Hyperspectral Imager for the Coastal Ocean (HICO),  Airborne Visible/InfraRed Imaging Spectrometer (AVIRIS)) will be modified to simulate data similar to Landsat 8 but with the addition of a new NIR band. The retrieval process will be performed with these simulated data with and without the new NIR band in order to evaluate performance improvement. A similar analysis will be done to evaluate narrower spectral bandwidths available in Landsat 8 compared to those found in the MEdium Resolution Imaging Spectrometer (MERIS) and MODIS, for instance. 
 
-% although a definitive assessment cannot be made due to lack of enough concurrent in situ measurements
+although a definitive assessment cannot be made due to lack of enough concurrent in situ measurements
+
 % -------------------------------------
-% \section{Concluding Remarks}
+\section{Concluding Remarks}
+
+% Limitations
+One of the limitation of using Landsat 8 is its temporal resolution.
+
+Clear weather conditions in the area of study.
+
+To date, there are no other sources of free access, open to the international science community, satellite imagery with similar spatial resolution or similar standard product (e.g. MODIS chl-a product) to compare with. Therefore, a direct comparison of results from our approach with typical algorithms over water bodies smaller than one kilometer is not possible. This is a challenge that needs to be addressed since there is a particular interest from local communities for monitoring water bodies that are not resolvable by current ocean color satellites. This is the case of the ponds included in this study, which are less than one kilometer in size. This fact makes Landsat 8 a pioneer in the retrieval of water quality parameters over medium to small water bodies. This also opens a need for more field measurement collection (i.e. IOPs, $R_{rs}$ and concentrations) on a regular basis where water quality needs to be assessed for the validation of products derived from moderate spatial resolution sensors such a Landsat 8 and the upcoming Sentinel 2. 
