Solved pdf bookmark problem with \texorpdfstring

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -74,7 +74,7 @@ Notes:
 \end{itemize}
 
 % -----------------------------------------------------------------------------
-\section{$R_{rs}$}
+\section{\texorpdfstring{$R_{rs}$}{Rrs}}
 
 method described by \cite{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site 
 
@@ -195,7 +195,7 @@ Method described by \cite{Mitchell2002} and \cite{Cleveland1993}
   \item Methanol
 \end{itemize}
 %*******************************
-\subsubsection{{\color{red} Procedure}}
+\subsubsection{Procedure}
 %*******************************
 \begin{enumerate}
   \item Turn the spectrophotometer on at least 30 minutes before measuring
@@ -292,7 +292,7 @@ Method described by \cite{Lorenzen:1967fk} and \cite{Ritchie:2008eu}.
 \end{itemize}
 
 %*******************************
-\subsubsection{{\color{red} Procedure}}
+\subsubsection{Procedure}
 %*******************************
 \begin{enumerate}
   \item Weight filters before filtering
