--- a/Summary.tex
+++ b/Summary.tex
@@ -1,7 +1,8 @@
 % !TEX root=Thesis_PhD.tex  
 % the previous is to reference main .bib
 %% CHAPTER
-\chapter{Conclusions and Future Work}
+\chapter{Conclusions and Future Work}\todo{change summary position}
+\label{ch:conc_future}
 This chapter includes a summary of this research, some discussions about the used methodology, the limitations of the used approach, the derived conclusions from the results and where this work could be taken as future work. The conclusions are separated into the main outcomes of this work: the MoB-ELM algorithm, and the retrieval of CPAs.
 
 % ------------------------------
