--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -182,7 +182,7 @@
 \usepackage{seqsplit}
 \usepackage{hyperref}
 \hypersetup{
-    bookmarks=true,         % show bookmarks bar?
+    % bookmarks=true,         % show bookmarks bar?
     unicode=false,          % non-Latin characters in AcrobatÕs bookmarks
     pdftoolbar=true,        % show AcrobatÕs toolbar?
     pdfmenubar=true,        % show AcrobatÕs menu?
@@ -374,14 +374,14 @@ Mis amados viejitos,\\ Osvaldo Concha Silva\\ and (y) \\ Nelly del Carmen Sep\'u
 
 
 % \input{Introduction.tex}
+
 \include{Introduction}
 \include{Objectives}
 \include{Background_and_Theory}
 \include{Methodology}
 \include{Results}
-\include{Summary}
 \include{Appendix}
-
+\include{Summary}
 
 \printindex
 \markboth{\it INDEX}{\it INDEX} % to change just this page header
