Got rid of warnings

--- a/Results.tex
+++ b/Results.tex
@@ -113,7 +113,7 @@ After collection, these water samples were analyzed in the lab at the Rochester 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 \subsection{Results from the MoB-ELM algorithm}
 
-The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction algorithm described in \S\ref{subsec:mobelm} was applied to the Landsat 8 scene collected on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment (\autoref{fig:L8Image130919}). The radiance and $R_{rs}$ spectra of the bright and dark pixels used for the MoB-ELM algorithm for this scene are shown in \autoref{fig:MOBELMpxls}. As an example of the MoB-ELM results, \autoref{fig:RrsROIs130919} shows the $R_{rs}$ spectrum for four different stations of the 09-19-2013 Landsat 8 scene  (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore). The shape of these spectra resemble $R_{rs}$ of water pixels. Also, the spectrum corresponding to low concentration of CPAs (i.e. ONTOS: Lake Ontario off-shore and ONTNS: Lake Ontario near-shore) can be distinguished from the rest of the spectrum corresponding to higher concentration of CPAs (i.e. LONGS: Long Pond south, CRANB: Cranberry Pond).
+The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction algorithm described in \S\ref{subsec:mobelm} was applied to the Landsat 8 scene collected on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment (\autoref{fig:L8Image130919}). The radiance and $R_{rs}$ spectra of the bright and dark pixels used for the MoB-ELM algorithm for this scene are shown in \autoref{fig:MOBELMpxls}. As an example of the MoB-ELM results, \autoref{fig:RrsROIs_130919} shows the $R_{rs}$ spectrum for four different stations of the 09-19-2013 Landsat 8 scene  (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore). The shape of these spectra resemble $R_{rs}$ of water pixels. Also, the spectrum corresponding to low concentration of CPAs (i.e. ONTOS: Lake Ontario off-shore and ONTNS: Lake Ontario near-shore) can be distinguished from the rest of the spectrum corresponding to higher concentration of CPAs (i.e. LONGS: Long Pond south, CRANB: Cranberry Pond).
 
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
@@ -135,7 +135,8 @@ The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction al
 \begin{figure}[htbp!]
   \centering
   \includegraphics[height=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/ROI130919_150422}
-  \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
+
+  \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore). \label{fig:RrsROIs_130919}} 
 \end{figure}
 
 Results of the MoB-ELM atmospheric correction method for different water bodies in the Rochester Embayment area are shown in \autoref{fig:waterpxs}. This figure shows the spectrum of the water pixels in water-leaving reflectance ($\rho_w=\pi R_{rs}$) values after applying the MoB-ELM atmospheric correction. These curves exhibit shapes that correspond with the shapes of typical water pixels. 
